+ Move ~SPC m o~ to ~SPC m l~ since ~SPC m o~ is now reserved for users
  (thanks to TheBB)
+ Ensure that =org-directory= exists on load (thanks to ralesi)
+ Fix ~SPC m l~ by calling =org-open-at-point= instead of =evil-org-open-links=
  (thanks to TheBB)
+ Fix org-repo-todo loading (thanks to TheBB)
+ Add =org-roam-server= package to visualise a =org-roam= database (thanks to KjartanOli)

**** Osx
- Re-factor and expand support for trash can (thanks to usharf)
- Add support for =launchctld= (thanks to usharf)
- Add new key binding to toggle fullscreen which should fix the usage
  of left command key for this command (thanks to sooheon)
- Change obsolete =new-frame= function to =make-frame= (thanks to fintelkai)

**** Pandoc
- Add =ox-pandoc= package (thanks to jcf)

**** Php
- =php-extras= is not correctly installed
- Enable flycheck (thanks to rakyi)

**** Puppet
- Enable =flycheck= support (thanks to tko)

**** Python
- Apply new conventions for test key bindings
- Fix =anaconda-mode= key bindings for latest version of =anaconda-mode=
  package (thanks cpaulik)
- Fix =py-yapf= for =yapf= >= 0.3.0 (=yapf= now returns 2 if source code was
  changed) (thanks to a-sk)
- Use =quit-window= to close documentation popup (thanks to cpaulik)
- Enable =evil-matchit= (thanks to robbyoconnor)
- Move anaconda server cache files to =.cache= directory (thanks to person808)

**** Racket
- Enable insert state after ~SPC m s B~ accordingly to the conventions
  (thanks to jmiven)

**** Ranger
- Fix =ranger-up-directory= key binding on ~-~ (thanks to ralesi)

**** Ruby
- Use =enh-ruby-mode= on interpreter-detected ruby files. This makes
  ruby files that start with shebang ruby directives use =enh-ruby-mode=
  (thanks to jenanwise)
- Add some =ruby-tools= key bindings (thanks to chrismcg)
- Enable =evil-matchit= (thanks to robbyoconnor)

**** Ruby-on-rails
- Activate =projectile-rails= mode for any type of files in a rails
  project (thanks to liuxiang)

**** Rust